# zero-mapper

./: .gitignore  Cargo.toml  LICENSE  README.en.md  README.ja.md  README.md  config.toml
.claude/: settings.local.json
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-03-10-overlay-hud.md
docs/superpowers/specs/: 2026-03-10-overlay-hud-design.md
src/: config.rs  input.rs  main.rs  mapper.rs  overlay.rs  startup.rs
