[package]
name = "zero_mapper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
indexmap = { version = "2.7", features = ["serde"] }
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8", features = ["preserve_order"] }
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_System_Power",
  "Win32_System_Registry",
  "Win32_System_RemoteDesktop",
  "Win32_System_Threading",
  "Win32_Storage_FileSystem",
  "Win32_UI_Accessibility",
  "Win32_UI_Input_XboxController",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_Shell",
  "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
embed-resource = "3"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = "symbols"
